2004-07-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/pow.S: localize labels, fix pow(N, 0).

2004-07-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/inttypes.h: avr-gcc >= 3.5 will be able to
	provide [u]int32_t when -mint8 is in effect.

2004-07-02  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Add copyright/license.
	Tweaks to handle inconsistencies in Atmel's files.
	* xml/Desc-parser.py: New file.
	* xml/Device.dtd: Make rww_start and rww_end optional since some
	devices don't have rww.
	* xml/Validate.py: Allow shell gobbing to work so you can validate more
	than one file at a time.

2004-06-30  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Work around bugs in Atmel's xml files.
	* xml/Device.dtd: Change order of nrww and rww bootloader attributes.

2004-06-30  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Add code to handle the boot loader information.
	* xml/Device.dtd: Add bootloader element.

2004-06-23  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py (gather_io_info): New function.
	(dump_ioregs): Implement dumping ioregisters.
	* xml/Device.dtd: Move ioreg elements into ioregisters element.
	Add access and init attributes to bit_field element.

2004-06-22  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Fixes to allow validation of generated file.
	* xml/Device.dtd: Ditto.
	* xml/Validate.py: New file.

2004-06-22  Theodore A. Roth  <troth@openavr.org>

	* xml/Device.dtd: Fix some syntax errors.

2004-06-22  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Now dumps header, memory size info and interrupts
	data as well-formed XML.
	* xml/Device.dtd: Change memory info to memory sizes.

2004-06-21  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: New file.
	* xml/Device.dtd: Don't force copyright/license in doc (just use a
	comment).
	Make device name an attribute of device.
	Add memory_info element of device.